lower-header/uppder-footer: correcting alignment, margin, padding, colour issues fixes: #563

--- a/adhocracy-plus/assets/scss/components/_follow.scss
+++ b/adhocracy-plus/assets/scss/components/_follow.scss
@@ -5,11 +5,18 @@
 }
 
 //nasty overwrite, needs to be changed in a4
+
+.follow > .btn--light,
+.follow > .btn--secondary {
+    background-color: transparent;
+    border: none;
+}
+
 .project-header--image {
     .follow > .btn--light,
     .follow > .btn--secondary {
         color: $white;
         background-color: transparent;
-        border: 1px solid $border-color;
+        border: none;
     }
 }
