--- a/adhocracy-plus/assets/scss/components/_tile.scss
+++ b/adhocracy-plus/assets/scss/components/_tile.scss
@@ -4,7 +4,6 @@
     page-break-inside: avoid;
     overflow-wrap: break-word;
     background-color: $body-bg;
-    box-shadow: 0 2px 22px 0 rgba(0, 0, 0, 0.06);
     border: 1px solid $gray-lightest;
     position: relative;
     margin-bottom: $spacer;
